[gd_scene load_steps=3 format=3 uid="uid://kpysr5v7gf2v"]

[ext_resource type="Script" uid="uid://cts148xw4xcq3" path="res://scripts/interface/itemBtn.gd" id="1_lpgbn"]
[ext_resource type="Texture2D" uid="uid://cj2dxi38ccfhy" path="res://assets/sprites/units/Monkey_p.png" id="2_pd158"]

[node name="ItemDisplay" type="MarginContainer"]
anchors_preset = -1
anchor_left = -0.0173611
anchor_right = 0.0173611
anchor_bottom = 0.0617284
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_lpgbn")
metadata/_edit_use_anchors_ = true

[node name="ItemBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
icon = ExtResource("2_pd158")
metadata/_edit_use_anchors_ = true

[node name="PreviewItem" type="Label" parent="ItemBtn"]
unique_name_in_owner = true
editor_description = "Contains the effect description"
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -0.375
anchor_top = -0.45
anchor_right = 1.375
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/line_spacing = -4
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "DESC NOT FOUND"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BgItem" type="ColorRect" parent="ItemBtn/PreviewItem"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.368627)

[node name="NameItem" type="Label" parent="ItemBtn"]
unique_name_in_owner = true
editor_description = "Contains the effect description"
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -0.55
anchor_top = 0.925
anchor_right = 1.55
anchor_bottom = 1.5
offset_left = 7.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/line_spacing = -4
theme_override_constants/outline_size = 2
text = "ITEM NOT FOUND"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BgItem" type="ColorRect" parent="ItemBtn/NameItem"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.368627)

[connection signal="button_up" from="ItemBtn" to="ItemBtn" method="_on_button_up"]
[connection signal="mouse_entered" from="ItemBtn" to="." method="_on_item_btn_mouse_entered"]
[connection signal="mouse_exited" from="ItemBtn" to="." method="_on_item_btn_mouse_exited"]
